webpack parcel and its importance

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "namastereact",
   "version": "1.0.0",
   "description": "Learning react",
-  "main": "index.html",
+  "main": "App.js",
   "scripts": {
     "test": "jest"
   },
@@ -19,5 +19,17 @@
   "bugs": {
     "url": "https://github.com/pradeep-ramola/NamasteReact/issues"
   },
-  "homepage": "https://github.com/pradeep-ramola/NamasteReact#readme"
+  "homepage": "https://github.com/pradeep-ramola/NamasteReact#readme",
+  "devDependencies": {
+    "parcel": "^2.11.0",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+
+  "browsersList":[
+    "last 2 chrome version"
+  ]
 }
