Revised Props and CSS

--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "namastereact",
   "version": "1.0.0",
   "description": "Learning react",
-  "main": "App.js",
+
   "scripts": {
+    "start" : "parcel index.html",
+    "build" : "parcel build index.html",
     "test": "jest"
   },
   "repository": {
