--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "namastereact",
   "version": "1.0.0",
   "description": "Learning react",
-
   "scripts": {
-    "start" : "parcel index.html",
-    "build" : "parcel build index.html",
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "repository": {
@@ -25,13 +24,14 @@
   "devDependencies": {
     "parcel": "^2.11.0",
     "process": "^0.11.10"
+    
   },
-  "dependencies": {
+  "dependencies": { 
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0"
   },
-
-  "browsersList":[
+  "browsersList": [
     "last 2 chrome version"
   ]
 }
